# flicker

./: Cargo.toml
benches/: tiger.rs
examples/: graphics.rs  png.rs  svg.rs
src/: canvas.rs  flatten.rs  geom.rs  lib.rs  path.rs  raster.rs  renderer.rs  text.rs  thread_pool.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse2.rs
svg/: Cargo.toml
svg/src/: lib.rs
