[package]
name = "flicker"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2021"
publish = false

[dependencies]
swash = { version = "0.1.4", features = ["scale"], default_features = false }
zeno = "0.2.2"

[dev-dependencies]
svg = { path = "svg" }
criterion = { version = "0.3", features = ["html_reports"] }
portlight = { git = "https://github.com/coupler-rs/portlight", rev = "27fa5fc1611fa8d414efb777c846fe0bf3bb8093" }

[[bench]]
name = "tiger"
harness = false

[workspace]
members = [
    "svg"
]
